# parrot_hat_follow

./: .gitignore  Cargo.toml
src/: kalman_filter.rs  main.rs  mock_printer_controller.rs  move_tactic_trait.rs  parrot_controller.rs  picture_funcs.rs  stand_still.rs  step.rs  tour.rs  ui.rs  ui_old.rs  virtual_controller.rs
src/parrot/: mod.rs  parrot_controller.rs
src/simulation/: mod.rs  traits.rs  virtual_controller.rs
src/simulation/movetactics/: mod.rs  move_linear.rs  move_squares.rs  move_stop.rs  stand_still.rs  stand_turn.rs
src/simulation/windtactics/: constant_wind.rs  mod.rs  no_wind.rs  periodic_wind.rs  random_wind.rs
src/ui/: get_picture.rs  mod.rs  run.rs  set_follower_settings.rs  set_hat_color.rs  set_kalman_settings.rs  step.rs  step_message.rs  tour.rs  welcome.rs
src/ui/controller/: mod.rs  start_follow.rs
src/ui/model/: controller_setting.rs  mod.rs  person_setting.rs  step_message.rs  steps.rs  tour_message.rs  wind_setting.rs
src/ui/view/: get_picture.rs  mod.rs  run.rs  set_controller_settings.rs  set_follower_settings.rs  set_hat_color.rs  set_kalman_settings.rs  welcome.rs
src/utils/: file_readers.rs  mod.rs  picture_funcs.rs  picture_recorder.rs  testers.rs
