[package]
name = "parrot_hat_follow"
version = "0.1.0"
authors = ["VaranTavers <tasnadi98@freemail.hu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_drone_follow = "^0.5.2"
parrot_ar_drone = "^0.1.1"
linearkalman = "0.1.3"
rulinalg = "0.4.2"
iced = { version = "0.1.1", features = ["image"] }
opencv = "0.34.0"
rand = "0.7.3"